--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -69,10 +69,14 @@ a {
 h1{
   font-size: clamp(70px, 16vw, 300px);
   font-weight: 100;
+  /* text-shadow: -1px 0 pink, 0 1px pink, 1px 0 pink, 0 -1px pink; */
 }
 
 h2{
   font-size: clamp(32px, 16vw, 200px);
+  font-weight: 100;
+  /* text-shadow: -1px 0 pink, 0 1px pink, 1px 0 pink, 0 -1px pink; */
+
 }
 
 p {
@@ -104,21 +108,6 @@ button {
   /* margin-top: 10vh;
   margin-bottom: 40vh; */
   /* transform: translateY(-50%); */
-}
-
-.text-overlay{
-  /* position: absolute; */
-  margin: 40% auto 0;
-  position: relative;
-  font-size: clamp(68px, 10vw, 300px);
-  font-weight: 100;
-  text-shadow: 10px 10px 20px rgb(67, 8, 8);
-  z-index: 10;
-  text-align: center;
-  /* top: 0px;  */
-  /* text-shadow: 10px 8px 16px rgb(var(--background-start-rgb)) */
-  /* background-color: rgb(var(--background-start-rgb)); */
-  /* color: rgb(var(--background-start-rgb)); */
 }
 
 .tile{
