--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -79,6 +79,13 @@ h2{
 
 }
 
+h3{
+  font-size: clamp(10px, 16vw, 60px);
+  font-weight: 100;
+  /* text-shadow: -1px 0 pink, 0 1px pink, 1px 0 pink, 0 -1px pink; */
+}
+
+
 p {
   font-size: clamp(16px, 8vw, 32px);
 }
