--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -43,6 +43,11 @@
   --card-border-rgb: 131, 134, 135;
 }
 
+::selection {
+  background-color: #ffcc00; /* Change this color to your desired highlight color */
+  color: #000; /* Change this color to the text color you want when highlighted */
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -59,39 +64,97 @@ body {
 body {
   color: black;
   background: rgb(var(--background-start-rgb));
-  /* font-family: 'Dosis', sans-serif; */
   font-family: 'Cormorant Garamond', serif;
-  /* font-size: 2vw; */
 } 
 
 a {
   color: inherit;
-  /* text-decoration: none; */
+  text-decoration: none ;
 }
 
-h1{
+a:hover {
+  color: inherit;
+  font-weight: bold;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin-top: 0;
+  margin-bottom: 0.5rem;
+  font-weight: normal;
+}
+
+.typography-heading {
   font-size: clamp(70px, 16vw, 300px);
   font-weight: 100;
+  user-select: none;
   /* text-shadow: -1px 0 pink, 0 1px pink, 1px 0 pink, 0 -1px pink; */
 }
 
-h2{
-  font-size: clamp(32px, 16vw, 200px);
+.typography-title {
+  font-size: clamp(50px, 4vw, 100px);
   font-weight: 100;
+  user-select: none;
+  /* line-height: 16vh; */
   /* text-shadow: -1px 0 pink, 0 1px pink, 1px 0 pink, 0 -1px pink; */
 
 }
 
-h3{
-  font-size: clamp(10px, 16vw, 60px);
-  font-weight: 100;
-  /* text-shadow: -1px 0 pink, 0 1px pink, 1px 0 pink, 0 -1px pink; */
+.typography-body {
+  font-size: clamp(16px, 8vw, 35px);
+  line-height: 6.5vh;
 }
 
-
-p {
-  font-size: clamp(16px, 8vw, 32px);
+.typography-details {
+  font-size: clamp(18px, 4vw, 24px);
 }
+
+.typography-shadow-black {
+  color: white;
+  text-shadow: 4px 4px 1px black
+}
+
+.typography-shadow-green{
+  color: white;
+  text-shadow: 4px 4px 1px green
+}
+
+/* ###################################### */
+/* ######### Start Roadmap page ######### */
+/* ###################################### */
+
+.image-fullwidth-container{
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+}
+
+.image-fullwidth{
+  width: 100vw;
+  max-width: 1280px;
+  height: auto;
+}
+
+.wrap-image-and-text {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.wrap-image-and-text > div {
+  min-width: 300px;
+  max-width: 600px;
+  line-height: 75px;
+  font-size: 30px;
+  padding: 0;
+}
+
+.minwidth-image {
+  width: 100%;
+  height: auto;
+  padding-left: 2vw;
+}
+
+/*             End Roadmap page           */
+/* ###################################### */
 
 hr {
   border: none; /* Remove default border */
@@ -117,6 +180,7 @@ button {
 } 
 
 .centerContentViewport{
+  padding-top: 5%;
   width: 100%;
   min-height: 100vh;
   text-align: center;
