fixed chain, reviewed positions of some objects

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -201,7 +201,7 @@ button {
 }
 
 .chain-lisa{
-  max-height: 5vh;
+  /* max-height: 5vh; */
   /* background-image: url('/chain-lisa-xs.png'); */
   /* background-size: cover; */
   /* background-repeat: repeat-x; */
